--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.SpeedReading"
         tools:targetApi="31">
         <activity
+            android:name=".los"
+            android:exported="false" />
+        <activity
             android:name=".reading"
             android:exported="false" />
         <activity
@@ -25,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
