Schulte Exercise added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".los"
             android:exported="false" />
         <activity
+            android:name=".Schulte"
+            android:exported="false" />
+        <activity
             android:name=".reading"
             android:exported="false" />
         <activity
