Even Numbers Exercise added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".Schulte"
             android:exported="false" />
         <activity
+            android:name=".EvenNum"
+            android:exported="false" />
+        <activity
             android:name=".reading"
             android:exported="false" />
         <activity
