--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
     implementation 'com.squareup.okhttp3:okhttp:3.6.0'
     implementation 'com.jjoe64:graphview:4.2.2'
-
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
